--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="landing-container">
-        <h1>Welcome to AI Techie</h1>
+        <h1>Welcome to AI Techie !!!!!!!!</h1>
         <p>Your go-to platform for AI-related questions and answers.!</p>
 
         <!-- Call-to-Action Buttons -->
