--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Techieeeeee - Q&A Platform</title>
+    <title>AI Techiiiiiiieeee - Q&A Platform</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"> <!-- Google Fonts -->
     <link rel="stylesheet" href="css/index.css"> <!-- Link to CSS file -->
 </head>
